--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-pandas
-altair
-gspread
-google-auth
+streamlit==1.42.0
+pandas==2.2.0
+altair==5.2.0
+gspread==6.0.0
+google-auth==2.27.0
